--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/new_script.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://Scenes/main.tscn")
 current_scene="res://Scenes/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
@@ -42,8 +42,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scripts/new_script.gd"]
+selected_script="res://Scripts/new_script.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
