--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -18,3 +18,8 @@ create_new_node=Rect2(810, 408, 1800, 1400)
 [quick_open_dialog]
 
 last_mode=0
+
+[color_picker]
+
+picker_shape=3
+recent_presets=PackedColorArray(0.6, 0.6, 0.21176471, 1, 0.6, 0.6, 0.5019608, 1, 0.6, 0.6, 0.15294118, 1, 0.6, 0.10980392, 0.15294118, 1)
