--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -60,7 +60,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1124, 792, 1172, 684)
+floating_window_rect=Rect2i(740, 520, 1940, 1172)
 floating_window_screen=0
 
 [ShaderEditor]
@@ -77,8 +77,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
+selected_paths=PackedStringArray("res://Textures/")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Textures/", "res://Scenes/")
 
 [docks/History]
 
