--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/new_script.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/up_down_animation.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -19,14 +19,14 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=280
-dock_hsplit_3=-280
+dock_hsplit_2=270
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_9_selected_tab_idx=0
-dock_3="Scene,Import"
-dock_4="FileSystem,History"
-dock_5="Inspector,Signals,Groups"
 dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
@@ -34,7 +34,7 @@ open_scenes=PackedStringArray("res://Scenes/main.tscn")
 current_scene="res://Scenes/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 bottom_panel_offsets={
 "Animation": 0,
 "Audio": -450,
@@ -42,31 +42,32 @@ bottom_panel_offsets={
 "Output": 0,
 "Shader Editor": 0
 }
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 70)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scripts/up_down_animation.gd"]
+selected_script="res://Scripts/up_down_animation.gd"
 open_help=[]
-script_split_offset=400
+script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(740, 520, 1940, 1172)
-floating_window_screen=0
+floating_window_rect=Rect2i(0, 0, 0, 0)
+floating_window_screen=-1
 
 [ShaderEditor]
 
 open_shaders=[]
-split_offset=400
+split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
 
