--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,14 +19,14 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=280
+dock_hsplit_3=-280
 dock_hsplit_4=0
 dock_9_selected_tab_idx=0
-dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
 dock_3="Scene,Import"
-dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_4="FileSystem,History"
+dock_5="Inspector,Signals,Groups"
+dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
 
 [EditorNode]
 
@@ -48,26 +48,26 @@ selected_bottom_panel_item=0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 23)
+position=Vector2i(0, 70)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/up_down_animation.gd"]
-selected_script="res://Scripts/up_down_animation.gd"
+open_scripts=["res://Scripts/buttons.gd"]
+selected_script="res://Scripts/buttons.gd"
 open_help=[]
-script_split_offset=200
+script_split_offset=400
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(740, 520, 1940, 1172)
+floating_window_screen=0
 
 [ShaderEditor]
 
 open_shaders=[]
-split_offset=200
+split_offset=400
 selected_shader=""
 text_shader_zoom_factor=1.0
 
@@ -78,8 +78,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://Textures/")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Textures/", "res://Scenes/")
+selected_paths=PackedStringArray("res://Scripts/buttons.gd")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Textures/", "res://Scripts/", "res://Scenes/")
 
 [docks/History]
 
