--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,13 +1,13 @@
-[res://Scripts/up_down_animation.gd]
+[res://Scripts/buttons.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
+"column": 23,
+"folded_lines": PackedInt32Array(),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 1.0,
+"row": 14,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
