--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="./comeIn.exe"
 patches=PackedStringArray()
 patch_delta_encoding=false
 patch_delta_compression_level_zstd=19
@@ -26,7 +26,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=2
+debug/export_console_wrapper=0
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
@@ -39,7 +39,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="uid://cri6ltuc2uvqc"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
